[UPD] uws set tasks/app/tmux
Rebinds some keys for manipulating windows and panes.

Enables mouse support. Also enables it for Vim in tmux.

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -1,23 +1,71 @@
+set -g mouse on
+
+
 # -- Key bindings {{{
 
-# Rebind prefix: Ctrl+B -> Alt+P
+# Rebind Prefix: Ctrl+B (default) -> Alt+\\
 unbind C-b
-set-option -g prefix M-p
-bind-key M-p send-prefix
+set-option -g prefix M-\\
+bind-key M-\\ send-prefix
 
-# Rebind pane splitting:
-#   Prefix+- to horizontal split
+
+# -- -- Windows {{{
+
+# New window: Alt+L
+bind-key -n M-l new-window
+
+# Prev / next window: Alt+, / Alt+.
+bind-key -n M-, previous-window
+bind-key -n M-. next-window
+
+# Swap window left / right: Ctrl+; / Ctrl+'
+bind-key -n M-\; { swap-window -t -1; select-window -t -1 }
+bind-key -n M-\' { swap-window -t +1; select-window -t +1 }
+
+# -- -- Windows }}}
+
+
+# -- -- Panes {{{
+
+# Horizontal split: Alt+-
+bind-key -n M-- split-window -v
+
+# Vertical split: Alt+=
+bind-key -n M-= split-window -h
+
+# Kill pane: Alt+Z
+bind-key -n M-z kill-pane
+
+# Prev / next pane: Alt+, / Alt+.
+bind-key -n C-, select-pane -t -1
+bind-key -n C-. select-pane -t +1
+
+# Swap pane Down / Up: Ctrl+; / Ctrl+'
+bind-key -n C-\; swap-pane -D
+bind-key -n C-\' swap-pane -U
+
+# Resize pane: Alt+[Arrow]
+bind-key -n M-Up resize-pane -U 1
+bind-key -n M-Down resize-pane -D 1
+bind-key -n M-Left resize-pane -L 1
+bind-key -n M-Right resize-pane -R 1
+
+# Rebind default horizontal splitting: Prefix+-
 unbind '"'
 bind - split-window -v
-#   Prefix+= to vertival split
+
+# Rebind default vertival splitting: Prefix+=
 unbind %
 bind = split-window -h
 
-# Rebind to kill without `confirm-before`
-bind-key & kill-window
-bind-key x kill-pane
+# -- -- Panes }}}
 
+
+# -- -- Vim mode {{{
+
+# Enable
 setw -g mode-keys vi
+
 # Default vi-mode keys:
 #   * Space - visual selection
 #   * Enter - copy selected
@@ -30,12 +78,7 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 #   Prefix+P to paste (Ctrl+Shift+V in the foot terminal works too)
 bind p paste-buffer
 
-bind-key -n C-w kill-window
-bind-key -n M-w new-window
-bind-key -n M-q previous-window
-bind-key -n M-e next-window
-bind-key -n M-[ select-pane -t -1
-bind-key -n M-] select-pane -t +1
+# -- -- Vim mode }}}
 
 # -- Key bindings }}}
 
