--- a/lib/ansible_collections/local/uws/roles/system/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/system/tasks/main.yml
@@ -1,2 +1,4 @@
 - import_tasks: "utils.yml"
 - import_tasks: "battery.yml"
+- import_tasks: "locale/install.yml"
+- import_tasks: "locale/default.yml"
