--- a/lib/ansible_collections/local/uws/roles/system/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/system/tasks/main.yml
@@ -2,3 +2,5 @@
 - import_tasks: "battery.yml"
 - import_tasks: "locale/install.yml"
 - import_tasks: "locale/default.yml"
+- import_tasks: "font/psf.yml"
+- import_tasks: "font/ttf.yml"
