[UPD] Does not uses the brightnessctl
The brightnessctl and the hotkeys to control the brightness may be
configured in the third-party configs, depending on the hardware.

--- a/config/hyprland.conf
+++ b/config/hyprland.conf
@@ -253,8 +253,8 @@ bindel = ,XF86AudioRaiseVolume, exec, pactl set-sink-volume $(pactl get-default-
 bindel = ,XF86AudioLowerVolume, exec, pactl set-sink-volume $(pactl get-default-sink) -5%
 bindel = ,XF86AudioMute, exec, pactl set-sink-mute $(pactl get-default-sink) toggle
 #bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 2%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 2%-
+#bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 2%+
+#bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 2%-
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
