--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -124,7 +124,7 @@ set-window-option -g window-status-activity-style "bg=color152"
 set-option -g status-left "\
 #[fg=color15, bg=color241]#{?client_prefix,#[bg=colour167],} #S "
 
-set-option -g status-right " <<battery>><<language>>%a %b/%d %H:%M "
+set-option -g status-right " <<battery>><<language>>%d.%m.%Y %H:%M "
 
 # Start index for windows and panes is 1, not 0.
 set -g base-index 1
