--- a/lib/ansible_collections/local/uws/playbooks/roles.yml
+++ b/lib/ansible_collections/local/uws/playbooks/roles.yml
@@ -1,8 +1,11 @@
 ---
 - name: "Arbitrary `uws set roles/<role>`"
   hosts: "all"
-  vars_files:
-    - "{{ uws }}/config/uws.yml"
   tasks:
+
+    - include_vars:
+        file: "{{ uws }}/config/uws.yml"
+        name: "settings"
+
     - import_role:
         name: "{{ playbook_target }}"
