--- a/lib/ansible_collections/local/uws/roles/workstation/tasks/app/tmux.yml
+++ b/lib/ansible_collections/local/uws/roles/workstation/tasks/app/tmux.yml
@@ -1,3 +1,5 @@
+- include_vars: "tmux.yml"
+
 - name: "/!/ tmux packages"
   package:
     name:
@@ -12,24 +14,26 @@
     dest: "{{ ansible_env.HOME }}/.tmux/plugins/tpm"
     depth: 1
 
+- name: "/?/ battery status util"
+  stat:
+    path: "/usr/local/bin/battery"
+  register: battery_util
 
-- name: "Battery status"
-
-  vars:
-    battery_status: "󰁹#(battery) | "
-
-  block:
-
-  - name: "/?/ battery util"
-    stat:
-      path: "/usr/local/bin/battery"
-    register: battery_util
-
-  - set_fact:
-      battery: "{{ battery_util.stat.exists | ternary(battery_status, '') }}"
-
+- name: "/?/ temperature status util"
+  stat:
+    path: "/usr/local/bin/temperature"
+  register: temperature_util
 
 - name: "/!/ tmux config"
+  vars:
+    battery: >-
+      {{
+        battery_util.stat.exists | ternary(battery_status, '')
+      }}
+    temperature: >-
+      {{
+        temperature_util.stat.exists | ternary(temperature_status, '')
+      }}
   template:
     src: "{{ uws }}/config/tmux.conf"
     dest: "{{ ansible_env.HOME }}/.tmux.conf"
