--- a/lib/ansible_collections/local/uws/roles/waybar/templates/module/temperature_default.jsonc
+++ b/lib/ansible_collections/local/uws/roles/waybar/templates/module/temperature_default.jsonc
@@ -1,5 +1,5 @@
 "temperature": {
-  "critical-threshold": 70,
+  "critical-threshold": << settings.monitoring.temperature.check_interval >>,
   "format": "{icon}{temperatureC}°C",
   "format-icons": ["", "", ""]
 }
