[UPD] uws set tasks/app/tmux
Opens a new pane or window in in the current path.

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -12,7 +12,7 @@ bind-key M-\\ send-prefix
 # -- -- Windows {{{
 
 # New window: Alt+L
-bind-key -n M-l new-window
+bind-key -n M-l new-window -c "#{pane_current_path}"
 
 # Prev / next window: Alt+, / Alt+.
 bind-key -n M-, previous-window
@@ -28,10 +28,10 @@ bind-key -n M-\' { swap-window -t +1; select-window -t +1 }
 # -- -- Panes {{{
 
 # Horizontal split: Alt+-
-bind-key -n M-- split-window -v
+bind-key -n M-- split-window -v -c "#{pane_current_path}"
 
 # Vertical split: Alt+=
-bind-key -n M-= split-window -h
+bind-key -n M-= split-window -h -c "#{pane_current_path}"
 
 # Kill pane: Alt+Z
 bind-key -n M-z kill-pane
@@ -52,11 +52,11 @@ bind-key -n M-Right resize-pane -R 1
 
 # Rebind default horizontal splitting: Prefix+-
 unbind '"'
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 
 # Rebind default vertival splitting: Prefix+=
 unbind %
-bind = split-window -h
+bind = split-window -h -c "#{pane_current_path}"
 
 # -- -- Panes }}}
 
