[UPD] uws set roles/bash
Modern bash prompt PS1.

--- a/lib/ansible_collections/local/uws/roles/workstation/tasks/utils.yml
+++ b/lib/ansible_collections/local/uws/roles/workstation/tasks/utils.yml
@@ -1,5 +1,12 @@
 # Install some CLI utils
 - package:
     name:
+
       - "strace"
+
+      # The unified interface for all archives
+      - "atool"
+      # requirements:
+      - "7zip"
+
   become: true
