--- a/lib/ansible_collections/local/uws/playbooks/main.yml
+++ b/lib/ansible_collections/local/uws/playbooks/main.yml
@@ -4,11 +4,4 @@
   vars_files:
     - "{{ uws }}/config/uws.yml"
   roles:
-    - "local.uws.system"
-    - "local.uws.locale"
-    - "local.uws.workstation"
-
-# TODO: Refactoring
-- import_playbook: "{{ playbook_dir }}/fs.yml"
-- import_playbook: "{{ playbook_dir }}/git.yml"
-- import_playbook: "{{ playbook_dir }}/hyprland.yml"
+    - "local.uws.desktop"
