--- a/lib/ansible_collections/local/uws/playbooks/main.yml
+++ b/lib/ansible_collections/local/uws/playbooks/main.yml
@@ -1,7 +1,11 @@
 ---
 - name: "Default uws tasks"
   hosts: "all"
-  vars_files:
-    - "{{ uws }}/config/uws.yml"
-  roles:
-    - "local.uws.desktop"
+  tasks:
+
+  - include_vars:
+      file: "{{ uws }}/config/uws.yml"
+      name: "settings"
+
+  - include_role:
+      name: "local.uws.desktop"
