[UPD] uws set roles/qemu
Does not writes __pycache__.

Placed in the global user bin path.

--- a/lib/ansible_collections/local/uws/roles/qemu/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/qemu/tasks/main.yml
@@ -7,5 +7,6 @@
 - name: "/>/ qemu runner"
   copy:
     src: "qemu.py"
-    dest: "{{ ansible_env.HOME }}/.local/bin/qemu"
+    dest: "/usr/local/bin/qemu"
     mode: "u=rwx,g=rx,o=rx"
+  become: true
