--- a/lib/ansible_collections/local/uws/roles/wayland/tasks/main.yml
+++ b/lib/ansible_collections/local/uws/roles/wayland/tasks/main.yml
@@ -1,8 +1,12 @@
-- name: "/!/ Wayland"
+- name: "/!/ Wayland packages"
   package:
     name:
       - "wayland"
+      - "wl-clipboard"
+      - "xdg-user-dirs"
   become: true
 
 - import_tasks: "app/foot.yml"
-- import_tasks: "app/colorpick.yml"
+
+# FIXME: `make` fails due to the 'convert' dependency
+#- import_tasks: "app/colorpick.yml"
